# casual-cli

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  bun-helpers.ts  bun.js  bun.lockb  casual.sqlite  casual.sqlite-shm  casual.sqlite-wal  index.html  index.ts  package.json
.cargo/: config.toml
.sqlx/: query-0d1b6dd897d9949cd7fd5b3abbd4bfd3e266aeb8e04f73277e205700fa189772.json  query-126192e06139b73e829880bbee174978666730b9588bc0168ae61a54d7d366e6.json  query-1e14e7c2c0697ceb6848a1ec74478138079888f20d7c934df4be2509d6b41d37.json  query-24a53a77a501e93a47f7fd4c7bc87f6ea56d49b9214e70eaa5749c500bcb4f75.json  query-54672a8743d47a0dc0dd2a3000c40c24676e0b3af288989e829fb19e7b53c3a1.json  query-55b2e3c35c6068921386f20daaf4c15e95ad63b92bd9ef65837421caeca2d5f3.json  query-5e071df88de1504b552b91636a47be23f882379265db124a94854dd19e2f33d4.json  query-714d10cb76076a8c10d147a14bfda609e7d809186b602406b671d4dd79a0ca8e.json  query-77ba5e6d574e615b2d788f436d04fe617043ace117e0d831f75fcd5447f84dd7.json  query-8482da66fb4c815cf21576e0b5c8121f5cb3a96b0a3f5e8241dbd677860c62af.json  query-889327048e7228fa66410e9343fcc4922d5bd6ea8eae00aecda18066bc7c2097.json  query-8b58a6a39270a65686ca7534c36280d1b0814d27f0631436e0b4fe7f451cc985.json  query-8c58cd655f004b02b3f348562dec25fbb81d7e0f824d50ca5b9dc6d494fc5ccb.json  query-8ec48f770d7434cf97ca8fcada3c7f4254a033ddc51e87624c59be042a878177.json  query-92a71e66f14c0b9c4a78659333330377bdb437a0135cf6c322adfc04aeb38bed.json  query-9437caa8b6dcaccda17a43cf1b4868dd8c029ddf6e0463fe6a46fec09aa108a2.json  query-a824559cbdc4c6c7cdb06d0fbf6c873b1bc99f314b92dabf15e9239ff771da98.json  query-a99053bd538bee411c1d1f67d2d714fdd2c298bbcbf9b418f68d4355587ecbe6.json  query-b2fbbd1549784ac4b0ea188ba40447ae61cf51ce7269cb1bcd2da8c83f72b840.json  query-b4aaba86c47e3de6bf349360197ee216bd8fd552dde4c2ac229c1f8c79e6faee.json  query-bdb99f1e82ea3e82b1dade11124ae6672cc71e7635392e79d98c6c266ecb7c83.json  query-c85f40d6fc21b90a36e8f47fa6593f649169fe8c6fefee656bf74af084027a64.json  query-d55f242032e895dee67fd3a78a6e08f298564fe8778be6d24ae0c8f16e5ff850.json  query-f175d93ed2d6c0d63b7c0d3409428c7146e5857f95fe4265750eeb6cf3602139.json  query-f34c48ce27385d91bfe78fb9af7110598cce989d3a379e2159a7d92d5daa3767.json
migrations/: 20240112141151_accounts.sql  20240121210414_Add_kenrick_and_CD.sql
routes/: accounts.ts  companies.ts  contracts.ts  finance.ts  home.ts  invoices.ts  make-invoice.ts  make-quote.ts  projects.ts  quotes.ts  schedule.ts  tasks.ts
src/: clapargs.rs  commands.rs  (+5 more)
(+11 files in other folders)
