[package]
name = "casual-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.13", features = ["derive"] }
dotenv = "0.15.0"
home = "0.5.9"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
simple_pdf_generator = "0.3.0"
simple_pdf_generator_derive = "0.2.1"
sqlx = { version = "0.7.3", features = ["sqlite", "chrono", "runtime-tokio", "tls-native-tls" ] }
struct-field-names-as-array = "0.3.0"
tokio = { version = "1.35.1", features = ["full"] }
