[package]
name = "casual-cli"
version = "0.1.0"
edition = "2021"
default-run = "casual-cli"

[lib]
name = "casual_cli_lib"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
dotenv = "0.15.0"
lettre = { version = "0.11.10", features = ["builder", "smtp-transport", "file-transport", "file-transport-envelope", "tokio1", "native-tls", "tokio1-native-tls"] }
home = "0.5.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
simple_pdf_generator = "0.3.0"
simple_pdf_generator_derive = "0.2.1"
sqlx = { version = "0.8.2", features = ["sqlite", "chrono", "runtime-tokio", "tls-native-tls" ] }
struct-field-names-as-array = { version = "0.3.0", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
